--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
 <p>
   Start editing to see some magic happen :)
 </p>
+
+<div *ngFor="let post of posts"> 
+  <div>Post Title: {{post?.title}}</div>
+</div>
